--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
   </head>
   <body>
     <h2>TheOrdinaryWizard</h2>
+    <div id="bio">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis laoreet nunc sit amet mauris varius sollicitudin. Quisque pharetra, leo in aliquam luctus, ante diam dictum massa, a finibus ex mi et libero. Proin eu odio quis mi scelerisque sagittis eu vel leo. Nam neque turpis, viverra id suscipit eu, imperdiet at nisl. Donec eget risus vitae velit bibendum tempor eu at nibh. Cras porttitor bibendum nisl, quis aliquam ligula rhoncus id. Nullam quis tristique nisi, vitae feugiat ante. In nunc quam, tincidunt sit amet urna nec, elementum rutrum lorem. Nam leo est, fringilla ut sapien ut, ultrices imperdiet felis. Quisque suscipit felis non semper accumsan. Nunc feugiat, metus id eleifend accumsan, est nisl semper orci, sed condimentum nulla urna gravida metus. Fusce non neque a metus dictum maximus ac vitae urna.</p>
+    </div>
   </body>
 </html>
