--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <html>
   <head>
     <script src="main.js"></script>
-    <style src="main.css"></style>
+    <style src="main.css">
+      #bio {
+        border: 5, black;
+      }
+    </style>
   </head>
   <body>
     <h2>TheOrdinaryWizard</h2>
