fixed the css (again..)

--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
 <html>
   <head>
     <script src="main.js"></script>
-    <style src="main.css">
-      #bio {
-        border: 5, black;
-      }
-    </style>
+    <link rel="stylesheet" href="main.css">
   </head>
   <body>
     <h2>TheOrdinaryWizard</h2>
